--- a/front/app/index.jade
+++ b/front/app/index.jade
@@ -4,6 +4,8 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(name="viewport", content="width = device-width, initial-scale = 1, maximum-scale = 1, user-scalable = no")
         meta(http-equiv="X-UA-Compatible", content="IE=10,chrome=1")
+        base(href="/")
         title pageTitle
+        link(rel="stylesheet", href="/css/styles.css")
     body
         p some text using jade, welcome to test app
