--- a/front/app/index.jade
+++ b/front/app/index.jade
@@ -7,5 +7,7 @@ html(lang="en")
         base(href="/")
         title pageTitle
         link(rel="stylesheet", href="/css/styles.css")
-    body
-        p some text using jade, welcome to test app
+    body(ng-app="CitySearch")
+        ui-view
+        script(src="/lib.js")
+        script(src="/app.js")
