created structure for home page i.e map

--- a/front/app/js/states/home.jade
+++ b/front/app/js/states/home.jade
@@ -1,1 +1,6 @@
-p home controller in action
+.home
+    .home__map
+    .home__toolbar
+        input(type="text")
+        button Search
+        button View History
