--- a/front/app/css/styles.styl
+++ b/front/app/css/styles.styl
@@ -2,3 +2,25 @@ body,
 html
     margin 0
     padding 0
+    width 100%
+    height 100%
+    min-width 320px
+    min-height 480px
+
+
+$homeToolbarHeight = 50px
+
+.home
+    position relative
+    width 100%
+    height 100%
+
++prefix-classes('home__')
+
+    .map
+        width 100%
+        height "calc(100% - %s)" % $homeToolbarHeight
+
+    .toolbar
+        width 100%
+        height $homeToolbarHeight
