--- a/front/app/js/states/home.jade
+++ b/front/app/js/states/home.jade
@@ -1,5 +1,6 @@
 .home
     .home__map
+        ui-gmap-google-map(center='map.center', zoom='map.zoom')
     .home__toolbar
         input(type="text")
         button Search
