--- a/front/app/index.jade
+++ b/front/app/index.jade
@@ -5,9 +5,10 @@ html(lang="en")
         meta(name="viewport", content="width = device-width, initial-scale = 1, maximum-scale = 1, user-scalable = no")
         meta(http-equiv="X-UA-Compatible", content="IE=10,chrome=1")
         base(href="/")
-        title pageTitle
+        title Search City
         link(rel="stylesheet", href="/css/styles.css")
     body(ng-app="CitySearch")
         ui-view
+        script(src="http://maps.googleapis.com/maps/api/js?sensor=false")
         script(src="/lib.js")
         script(src="/app.js")
