--- a/front/app/js/states/home.jade
+++ b/front/app/js/states/home.jade
@@ -2,6 +2,6 @@
     .home__map
         ui-gmap-google-map(center='map.center', zoom='map.zoom')
     .home__toolbar
-        input(type="text")
-        button Search
-        button View History
+        input(type="text", ng-model="city")
+        button(ng-click="search(true)") Search
+        button(ng-click="history()") View History
