markers are displayed on map properly, with user images and tweets on click

--- a/front/app/index.jade
+++ b/front/app/index.jade
@@ -7,6 +7,7 @@ html(lang="en")
         base(href="/")
         title Search City
         link(rel="stylesheet", href="/css/styles.css")
+        link(rel="stylesheet", href="/css/lib.css")
     body(ng-app="CitySearch")
         ui-view
         script(src="http://maps.googleapis.com/maps/api/js?sensor=false")
