--- a/front/app/js/states/home.jade
+++ b/front/app/js/states/home.jade
@@ -2,7 +2,9 @@
 
     .home__map
         ui-gmap-google-map(center="map.center", zoom="map.zoom")
-            ui-gmap-markers(models="markers", coords="'coords'")
+            ui-gmap-markers(models="markers", coords="'coords'", icon="'image'")
+                ui-gmap-windows(show="'show'", doRebuildAll="true")
+                    div(ng-non-bindable) {{title}}
 
     form.home__toolbar(ng-submit="search(true)")
         input(type="text", ng-model="city")
