--- a/front/app/css/styles.styl
+++ b/front/app/css/styles.styl
@@ -32,6 +32,20 @@ ui-gmap-google-map,
     height 100%
 
 +prefix-classes('home__')
+    
+    .title
+        position absolute
+        top 50px
+        width 100%
+        color black
+        text-align center
+        z-index 1
+
+        &>span
+            font-size 36px
+            font-family arial
+            padding 2px
+            background rgba(255, 255, 255, 0.5)
 
     .map
         width 100%
