project finished, history implemented

--- a/front/app/js/states/history.jade
+++ b/front/app/js/states/history.jade
@@ -1,6 +1,6 @@
 .history
-	a.history__back(ui-sref="home") << back to the tweets!
+	a.history__back(ui-sref="home") << back to search page
 	ul.history__list
 		li(ng-repeat="item in recentSearch")
-			a(ui-sref="home({ cityName: item })") {{item}}
+			a(ui-sref="home({ cityName: item })") {{display(item)}}
 
