--- a/front/app/css/styles.styl
+++ b/front/app/css/styles.styl
@@ -40,6 +40,7 @@ ui-gmap-google-map,
         color black
         text-align center
         z-index 1
+        pointer-events none
 
         &>span
             font-size 36px
